--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -8,9 +8,14 @@
 
 .footer-info {
   color: #fff;
-  font-family: "Inter", Arial, Helvetica, sans-serif;
   font-size: 14px;
   text-align: right;
   text-decoration: none;
   letter-spacing: 0.01em;
+}
+
+@media all and (max-width: 550px) {
+  .footer {
+    padding: 10px;
+  }
 }
