--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -17,7 +17,6 @@
 }
 
 .search-service__info {
-  font-family: "Inter", Arial, Helvetica, sans-serif;
   font-size: 20px;
   line-height: 24px;
   letter-spacing: var(--letter-spacing);
@@ -36,7 +35,6 @@
   & a {
     text-decoration: none;
     color: #fff;
-    font-family: "Inter";
     letter-spacing: var(--letter-spacing);
     font-size: 22px;
   }
@@ -59,7 +57,7 @@
 .search-service__img::before {
   content: "";
   width: 30px;
-  height: 24px;
+  height: 25px;
   background-color: #fff;
   position: absolute;
   top: 10px;
@@ -69,22 +67,20 @@
 .h2__title {
   font-family: "Ferry";
   font-size: 45px;
+  margin-top: 10%;
   letter-spacing: var(--letter-spacing);
 }
 
 .why-we__img {
   background-image: url("../../assets/images/why-we.svg");
-  margin-bottom: 10%;
-  height: 590px;
+  margin-bottom: 5%;
+  height: 615px;
   width: 100%;
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
-@media screen and (max-width: 1212px) {
-  .main {
-    margin: 30px;
-  }
-
+@media all and (max-width: 1300px) {
   .search-service {
     flex-direction: column;
   }
@@ -99,11 +95,39 @@
   .search-service__info {
     min-width: 80%;
   }
+
+  .image {
+    max-width: 100%;
+  }
 }
 
-@media screen and (max-width: 550px) {
+@media all and (max-width: 550px) {
+  .main {
+    padding: 10px;
+  }
+
   .search-service__request-button,
   .search-service__info {
     min-width: 100%;
+  }
+
+  .search-service__title,
+  .h2__title {
+    font-size: 22px;
+    line-height: 34px;
+  }
+
+  .search-service__info {
+    font-size: 18px;
+    margin: 20px 0;
+  }
+
+  .search-service__img::before {
+    top: 1%;
+    right: 8%;
+  }
+  .why-we__img {
+    background-size: 200%;
+    height: 300px;
   }
 }
