--- a/src/components/SearchResult/searchResult.css
+++ b/src/components/SearchResult/searchResult.css
@@ -1,3 +1,72 @@
 .search-result {
   padding: var(--padding);
+  min-height: calc(100vh - 234px);
+}
+
+.search-result__title {
+  width: 100%;
+}
+
+.search-result__error {
+  margin: 50px 0px;
+  font-size: 30px;
+  line-height: 70px;
+}
+
+.search-result-error__info a {
+  text-decoration: none;
+  color: var(--main-color-blue);
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+.search-result__top {
+  display: flex;
+  justify-content: space-between;
+}
+
+.search-result__img {
+  height: 370px;
+}
+
+.slider-loader {
+  display: flex;
+  justify-content: center;
+  width: auto;
+  height: 160px;
+  margin: 30px 0;
+  border: 2px solid #029491;
+  border-radius: 10px;
+  flex-direction: column;
+  align-items: center;
+}
+
+.loading-data {
+  color: #000;
+  font-size: 18px;
+  letter-spacing: 0.36px;
+  margin-top: 10px;
+}
+
+@media all and (max-width: 940px) {
+  .search-result {
+    padding: 10px;
+  }
+
+  .search-result__top {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .search-result__img {
+    height: 250px;
+    max-width: 100%;
+  }
+  .search-result__error {
+    margin: 0;
+    font-size: 20px;
+    line-height: 30px;
+    text-align: center;
+  }
 }
