--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ body,
 html {
   font-family: "Inter", Arial, Helvetica, sans-serif;
   min-height: 100vh;
-  min-width: 100vw;
+  max-width: 100vw;
 }
 
 :root {
